<resources>
    <string name="google_maps_api_key">AIzaSyBnWLPmG_U4vsjQBUO7CXSLyA7jxC0maxs</string>

    <string name="app_name">Smart Medilation</string>
    <string name="new_account">REGISTER</string>
    <string name="signup_desc">Start by entering your name and categories below.</string>

    <string name="login_desc">Enter your login details to access your account</string>
    <string name="message">This App will send you an SMS message for verification and standard rates apply.. Kindly enter your phone Number</string>
    <string name="log_in">Login</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_register_as_doctor">Login / Register as Doctor</string>
    <string name="login_register_as_patient">Login / Register as Patient</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="reset">Reset Password</string>
    <string name="login_as_doctor">Login as Doctor</string>
    <string name="login_as_patient">Login as Patient</string>
    <string name="reg_as_doctor">Register as Doctor</string>
    <string name="reg_as_patient">Register as Patient</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="experience">Experience</string>
    <string name="about_me">About Me</string>
    <string name="physical_appointment">Physical Appointment Price</string>
    <string name="online_appointment">Online Appointment Price</string>
    <string name="qualification">Qualification</string>
    <string name="specialization">Specialization</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="num">+92</string>
    <string name="no_doctor_found">No Doctor Found</string>
    <string name="no_app_found">No Appointment Found</string>
    <string name="profile">Profile</string>
    <string name="slots">Doc Availability</string>
    <string name="request_for_appointment">Request For Appointment</string>
    <string name="book_appointment">Book an Appointment</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="certificates">Certificates</string>
    <string name="patient_time">Patient Time 09:00 AM to 06:00 PM</string>
    <string name="all_doctors">All Doctors</string>
    <string name="accept">Accept</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reject">Reject</string>
    <string name="loading">Loading</string>
    <string name="payment">Payment</string>
    <string name="total_payment">Total Payment : </string>
    <string name="payment_methods">Payment Methods</string>
    <string name="choose_your_desired">Choose your desired payment method given below</string>
    <string name="jazz_cash">Jazz Cash</string>
    <string name="easy_paisa">Easy Paisa</string>
    <string name="cash">Cash</string>
    <string name="default_method">Default Method</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_slots">Update Time Slots</string>
    <string name="admin">ADMIN</string>
    <string name="my_appointments">My Appointments</string>
    <string name="schedule_an_appointment">Schedule an Appointment</string>
    <string name="schedule_appointment">Scheduled Appointment</string>
    <string name="schedule">Schedule</string>
    <string name="select_domain">Select Domain</string>
    <string name="history">Appointment History</string>
    <string name="cancel">Cancel</string>
    <string name="done">DONE</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_appointment_created_successfully">Your Appointment Created Successfully</string>
    <string name="search_here">Search Here</string>
    <string name="home">Dashboard</string>


    <string-array name="appointmentType">
        <item>Select Appointment Type</item>
        <item>Physical</item>
        <item>Online</item>
        <item>Door 2 Door</item>
    </string-array>

    <string-array name="timeSlot">
        <!--        <item>Select Time Slot</item>-->
        <item>01:00 AM - 02:00 AM</item>
        <item>02:00 AM - 03:00 AM</item>
        <item>03:00 AM - 04:00 AM</item>
        <item>04:00 AM - 05:00 AM</item>
        <item>05:00 AM - 06:00 AM</item>
        <item>06:00 AM - 07:00 AM</item>
        <item>07:00 AM - 08:00 AM</item>
        <item>08:00 AM - 09:00 AM</item>
        <item>09:00 AM - 10:00 AM</item>
        <item>10:00 AM - 11:00 AM</item>
        <item>11:00 AM - 12:00 PM</item>
        <item>01:00 PM - 02:00 PM</item>
        <item>02:00 PM - 03:00 PM</item>
        <item>03:00 PM - 04:00 PM</item>
        <item>04:00 PM - 05:00 PM</item>
        <item>05:00 PM - 06:00 PM</item>
        <item>06:00 PM - 07:00 PM</item>
        <item>07:00 PM - 08:00 PM</item>
        <item>08:00 PM - 09:00 PM</item>
        <item>09:00 PM - 10:00 PM</item>
        <item>10:00 PM - 11:00 PM</item>
        <item>11:00 PM - 12:00 AM</item>
    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="qualifications">
        <item>M.B.B.S</item>
        <item>BS Nursing</item>
        <item>Doctorate Physician</item>
        <item>Doctorate Medicine</item>
        <item>Doctorate Osteopathic</item>
    </string-array>

    <string-array name="exp">
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
        <item>4 Years</item>
        <item>5 Years</item>
        <item>6 Years</item>
        <item>7 Years</item>
        <item>8 Years</item>
        <item>9 Years</item>
        <item>10 Years</item>
        <item>11 Years</item>
        <item>12 Years</item>
        <item>13 Years</item>
        <item>14 Years</item>
        <item>15 Years</item>
        <item>16 Years</item>
        <item>17 Years</item>
        <item>18 Years</item>
        <item>19 Years</item>
        <item>20 Years</item>
        <item>20+ Years</item>
    </string-array>
    <string-array name="allCats">
        <item>Anesthesiologists</item>
        <item>Cardiologists</item>
        <item>Child Specialist</item>
        <item>Dentist</item>
        <item>Dermatologists</item>
        <item>Endocrinologists</item>
        <item>Eye Specialist</item>
        <item>Family Physicians</item>
        <item>Gastroenterologists</item>
        <item>Gynecologists</item>
        <item>General Surgeon</item>
        <item>Hematologists</item>
        <item>Immunologists</item>
        <item>Internists</item>
        <item>Medical Geneticists</item>
        <item>Nephrologists</item>
        <item>Neurologists</item>
        <item>Ophthalmologists</item>
        <item>Orthopedics</item>
        <item>Psychiatrist</item>
        <item>Podiatrists</item>
        <item>Skin Specialist</item>
        <item>Urologist</item>
    </string-array>

    <string name="fitness_text">Your Health is \nour Priority.</string>
    <string name="categories">Categories</string>
    <string name="top_categories">Top Categories</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="see_all">See All</string>
    <string name="search_doc">Search Top Doctors</string>
    <string name="logout">Logout</string>
    <string name="rating">Rating</string>
    <string name="rate">4.5</string>
    <string name="about">About</string>
    <string name="about_text">Doctors, also known as physicians, are licensed health professionals who maintain and restore human health through the practice of medicine. They examine patients, review their medical history, diagnose illnesses or injuries, administer treatment, and counsel patients on their health and well-being.</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="day">DAY</string>
    <string name="date_">Apr 26</string>
    <string name="select_appointment">Select Appointment Type</string>
    <string name="select_date">Schedule Date</string>
    <string name="select_days">Schedule Days</string>
    <string name="set_days">Set Available Days</string>
    <string name="select_time">Select Time Slot</string>
    <string name="set_time">Select Available Time-Slot</string>

    <string name="physical">Physical</string>
    <string name="online">Online</string>
    <string name="door_door">Door 2 Door</string>
    <string name="complete">Complete</string>
    <string name="start">Start</string>
    <string name="rate_doctor_services">Rate Doctor Services</string>
    <string name="enter_text">Enter Text</string>
    <string name="send">Send</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews Found</string>
    <string name="note"> Note Your Payment is Due.\n You select Cash in Payment Method.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="estimated_distance">Estimated Distance</string>
    <string name="map">MAP</string>

</resources>