<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".ui.login.RegistrationActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primaryColor">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/titletxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/new_account"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="5dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/login_as_doctor"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/ic_user"
                app:civ_border_color="@color/primaryColor"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/add_profile_picture"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/userinfo_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/name"
                    android:background="@drawable/bg_white"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="14dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/email"
                    android:background="@drawable/bg_white"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/about"
                        android:src="@drawable/ic_cell" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:paddingStart="8dp"
                        android:gravity="center"
                        android:text="@string/num"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <EditText
                        android:id="@+id/edtPhoneNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/phone_number"
                        android:background="@drawable/bg_white"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="12dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_white"
                    android:padding="0dp"
                    android:textAlignment="center"
                    app:boxBackgroundMode="none"
                    app:boxStrokeWidth="0dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="14dp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="0dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/layoutExp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_special" />

                    <Spinner
                        android:id="@+id/spnExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/experience"
                        android:drawableStart="@drawable/ic_special"
                        android:entries="@array/exp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/experience"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtRatePhysical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/experience"
                    android:background="@drawable/bg_white"
                    android:drawableStart="@drawable/dollar"
                    android:drawablePadding="14dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/physical_appointment"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtRateOnline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/experience"
                    android:background="@drawable/bg_white"
                    android:drawableStart="@drawable/dollar"
                    android:drawablePadding="14dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/online_appointment"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/layoutQualification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/about"
                        android:src="@drawable/ic_qualification" />

                    <Spinner
                        android:id="@+id/spnQualification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/qualification"
                        android:drawableStart="@drawable/ic_special"
                        android:entries="@array/qualifications"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/qualification"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutSpecialization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_special" />

                    <Spinner
                        android:id="@+id/spnSpecialization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/specialization"
                        android:drawableStart="@drawable/ic_special"
                        android:entries="@array/allCats"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/specialization"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@string/about_me"
                    android:background="@drawable/bg_white"
                    android:drawableStart="@drawable/ic_adm"
                    android:drawablePadding="14dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/about_me"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="180"
                    android:padding="12dp"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/bg_primary"
                    android:fontFamily="@font/poppins"
                    android:text="@string/new_account"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
